# 7DaysToCry

./: .gitignore  .~lock.Design.odt#  CMakeLists.txt  Design.odt  README.md  main.cpp
data/ShadersGL/: BasicMesh.shader
